[package]
name = "redis_space_check"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
indicatif = "0.17.8"
itertools = "0.13.0"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
rand = "0.8.5"
rayon = "1.10.0"
redis = { version = "0.22.3", features = ["r2d2"] }
uuid = { version = "1.10.0", features = ["v4"] }
